# herdr-agent-team

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOFF.md  README.md  findings-84-archive.md  herdr-plugin.toml  progress-84-archive.md  task_plan-84-archive.md
docs/: spec.md
docs/adr/: 0009-team-adopt.md  0012-pivot-to-herdmates.md  0013-north-star-mission-control.md
docs/agents/: domain.md  issue-tracker.md
docs/handoffs/: 2026-07-17-wayfinder-map-e2e-fix.md
docs/learnings/: program-execution-2026-07-15.md  review-fixes-103-2026-07-17.md  stage0-e2e-2026-07-15.md  wave5-2026-07-15.md
docs/research/: cmux-limux-herdr-comparison-2026-07-16.md  hook-companion-surface-2026-07-16.md  mission-control-feature-landscape-2026-07-16.md  native-teamfiles-schema-2026-07-16.md
docs/research/cmux-comparative-2026-07-16/: REPORT-features.md  REPORT.md
docs/reviews/: feature-capability-map.md  feature-proof-standard.md  feature-reality-audit.md  feature-reality-evidence-ledger.md  frontier-plan-2026-07-16.md  implementation-review-program.md
skills/atomizer/: SKILL.md  atomize.sh
skills/codex-prompting/: SKILL.md
skills/god/: SKILL.md
src/: adopt.rs  agents_md.rs  audit.rs  board.rs  focus_pane.rs  focusfile.rs  gather.rs  god_cli.rs  herdr.rs  hook.rs  idmap.rs  inbox_write.rs  jump.rs  launcher.rs  lib.rs  main.rs  metadata.rs  msg.rs  pane_board.rs  paths.rs  pump.rs  reconcile.rs  run.rs  socket.rs  socket_backend.rs  spawn.rs  spec.rs  status_kill.rs  teammux.rs  types.rs
tests/golden/: agents_md_mesh.md  agents_md_star.md
(+123 files in other folders)
