[package]
name = "herdr-agent-team"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Herdr plugin: heterogeneous coding-agent teams under a coordinating god session"
repository = "https://github.com/caioniehues/herdr-agent-team"

[dependencies]
crossterm = "0.28"
fs4 = { version = "1.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
