[package]
name = "herdmates"
version = "2.2.0"
edition = "2021"
license = "MIT"
description = "Herdr plugin: Claude Code teammates, native in herdr — shim, agent board, focus pane"
repository = "https://github.com/caioniehues/herdmates"

[dependencies]
crossterm = "0.28"
fs4 = { version = "1.1", features = ["sync"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
